# mcp-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  arcade_utils.py  example_client.py  example_server.py  host.py  llm_utils.py  main.py  plan_exec_agent.py  pyproject.toml  requirements.txt  step_executor.py  tool_processor.py
.basedpyright/: baseline.json
example_mcp/: arcade_tests.py  example_client.py  example_server.py
mcp/: __init__.py  host.py
mcp/mcp_clients/: __init__.py  exa_client.py  gmail_client.py  mcp_client.py  outlook_client.py
mcp/mcp_clients/test_scripts/: test_linear.py
mcp_assistant/: __init__.py  errors.py  host.py  utils.py
mcp_assistant/mcp_clients/: exa_client.py  gcal_client.py  gmail_client.py  mcp_client.py  notion_client.py  outlook_client.py  slack_client.py  whatsapp_client.py
mcp_assistant/mcp_clients/test_scripts/: test_linear.py
mcp_clients/: __init__.py  exa_client.py  gcal_client.py  gmail_client.py  notion_client.py  outlook_client.py  slack_client.py  whatsapp_client.py
mcp_clients/test_scripts/: test_linear.py
src/: __init__.py  llm_utils.py  plan_exec_agent.py  step_executor.py  tool_processor.py
src/plan_exec_agent/: __init__.py  arcade_utils.py  llm_utils.py  plan_exec_agent.py  redis_publisher.py  step_executor.py  test_arcade_utils.py  tool_processor.py  types.py
toolkits/: README.md  requirements.txt  worker.toml
toolkits/exa/: LICENSE  Makefile  README.md  pyproject.toml
toolkits/exa/arcade_exa/: __init__.py  types.py  utils.py
toolkits/exa/evals/: eval_exa.py
toolkits/exa/tests/: test_exa.py
(+10 files in other folders)
