[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plan-exec-agent"
version = "0.1.0"
authors = [
    { name="David Garnitz" }
]
description = "A planning and execution agent for task automation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic>=0.49.0",
    "arcadepy>=1.4.0",
    "langfuse>=2.60.3",
    "mcp>=1.6.0",
    "openai>=1.78.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "typing-extensions>=4.13.2"
]

[project.urls]
"Homepage" = "https://github.com/AIAtrium/mcp-assistant"
"Bug Tracker" = "https://github.com/AIAtrium/mcp-assistant/issues"

[tool.hatch.build]
packages = ["src/plan_exec_agent"]

[tool.hatch.build.targets.wheel]
packages = ["src/plan_exec_agent"]